--- a/form.html
+++ b/form.html
@@ -1,32 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <title>Form</title>
 </head>
+
 <body>
     <div class="containerfull">
-    <div class="containerform">
-<form>
-    <h1>Fique Atualizado!</h1>
-    <p>Junte-se a mais de 60.000 gerentes de produto que recebem atualizações mensais sobre:
-        <ul>Descoberta e construção de produtos que importam</ul>
-        <ul>Medir para garantir que as atualizações sejam um sucesso</ul>
-        <ul>E muito mais!</ul>
-    </p>
-    <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-      </div>
-        </form>
-        <img id="formimg" src="https://img.freepik.com/vetores-gratis/ilustracao-do-conceito-de-formularios_114360-4947.jpg?size=626&ext=jpg&ga=GA1.1.1312442622.1711991044&semt=sph" alt="">
+        <div class="containerform">
+            <form>
+                <div class="container-left">
+                <div class="texto">
+                    <h1><strong>Fique Atualizado!</strong></h1>
 
-        
-    </div>
+                    <p>Junte-se a mais de 60.000 gerentes de produto que recebem atualizações mensais sobre:
+                    <div>
+                        <ul><em><kbd>✓</kbd> Descoberta e construção de produtos que importam</em></ul>
+                        <ul><em><kbd>✓</kbd> Medir para garantir que as atualizações sejam um sucesso</em></ul>
+                        <ul><em><kbd>✓</kbd> E muito mais!</em></ul>
+                    </div>
+                    </p>
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Email address</label>
+
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                        placeholder="Emailexemplo@gmail.com">
+
+                    <button type="button" type="submit" id="button" class="btn btn-primary">Assine a newsletter
+                        mensal</button>
+                </div>
+            </div>
+            </form>
+            <img id="formimg"
+                src="https://img.freepik.com/vetores-gratis/ilustracao-do-conceito-de-formularios_114360-4947.jpg?size=626&ext=jpg&ga=GA1.1.1312442622.1711991044&semt=sph"
+                alt="">
+
+
+        </div>
     </div>
 </body>
+
 </html>
