--- a/form.html
+++ b/form.html
@@ -17,7 +17,7 @@
             <form>
                 <div class="container-left">
                 <div class="texto">
-                    <h1><strong>Fique Atualizado!</strong></h1>
+                    <h1 id="h1"><strong>Fique Atualizado!</strong></h1>
 
                     <p>Junte-se a mais de 60.000 gerentes de produto que recebem atualizações mensais sobre:
                     <div>
